# h2s-try4

a2a_friend_scheduling/: .env  README.md
a2a_friend_scheduling/ease_my_trip_travel_concierge/travel_concierge/: agent.py
a2a_friend_scheduling/ease_my_trip_travel_concierge_adk/ease_my_trip_travel_concierge/: agent.py
a2a_friend_scheduling/flight_concierge_adk/: __main__.py  agent.py  agent_executor.py
a2a_friend_scheduling/host_agent_adk/host/: agent.py
a2a_friend_scheduling/train_concierge_adk/: __main__.py  agent.py  agent_executor.py  pyproject.toml
a2a_friend_scheduling/train_concierge_agent_adk/: __main__.py  agent.py  agent_executor.py  pyproject.toml
